# sonnen-cc

./: .gitignore  README.md  catalog.py  example_receipt.py  model_objects.py  mypy.ini  pyproject.toml  receipt.py  receipt_printer.py  receipt_printer_html.py  receipt_printer_text.py  shopping_cart.py  shopping_cart_item.py  teller.py
templates/: receipt.html
tests/: fake_catalog.py  test_new_supermarket.py  test_supermarket.py
